Added text about the experiments

--- a/index.ipynb
+++ b/index.ipynb
@@ -1,6 +1,53 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Apache Spark Experiments - Wikipedia Top Contributors\n",
+    "\n",
+    "## Spark Application\n",
+    "\n",
+    "The application analyses the last revision of every Wikipedia page and outputs the top 10 contributors. Relevant lines:\n",
+    "\n",
+    "```python\n",
+    "schema = StructType([\n",
+    "    # ... So Spark doesn't need to scan all the data to infer its schema\n",
+    "])\n",
+    "\n",
+    "wikiData = sqlCtx.jsonFile(\"hdfs://namenode:8020/enwiki.json\",\n",
+    "                           schema=schema)\n",
+    "wikiData.registerAsTable(\"wikiData\")\n",
+    "users = sqlCtx.sql(\"SELECT revision.contributor.username as user, \"\n",
+    "                   \"       COUNT(*) AS contribs \"\n",
+    "                   \"FROM wikiData \"\n",
+    "                   \"WHERE revision.contributor.username <> '' \"\n",
+    "                   \"GROUP BY revision.contributor.username \"\n",
+    "                   \"ORDER BY contribs DESC LIMIT 10\").collect()\n",
+    "\n",
+    "for user in users:\n",
+    "    print(\"%s: %d\" % user)\n",
+    "```\n",
+    "\n",
+    "Output for all the Wikipedia dump from enwiki-20150304-pages-articles.xml.bz2 (45 GB of JSON input):\n",
+    "\n",
+    "    Addbot: 426703\n",
+    "    RjwilmsiBot: 408537\n",
+    "    Xqbot: 368493\n",
+    "    RussBot: 274009\n",
+    "    Legobot: 267074\n",
+    "    BOTijo: 245795\n",
+    "    AvicBot: 229107\n",
+    "    Cydebot: 224454\n",
+    "    Yobot: 221754\n",
+    "    EmausBot: 177984\n",
+    "\n",
+    "## Weak-scaling Experiment\n",
+    "\n",
+    "The amount of data is fixed: 1 GB per node, less than the available memory. The nodes are virtual machines from Nuvem USP."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -42,6 +89,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Scatter Plot\n",
+    "Scatter plot with all durations in *y* and start time in *x*. Uses different colors for each worker amount."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
@@ -60,9 +115,6 @@
     }
    ],
    "source": [
-    "# Scatter plot with all durations in y and start time in x\n",
-    "# Uses different colors for each worker amount\n",
-    "\n",
     "# Moving x axis to the top\n",
     "_, ax = plt.subplots(figsize=(12,5))\n",
     "ax.xaxis.set_label_position('top')\n",
@@ -91,6 +143,15 @@
     "plt.xlim(1431637200 - 2 * 3600, 1431658800 + 9*h6)\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Execution Time Prediction\n",
+    "\n",
+    "Is it possible to predict the execution time of the whole application (45 GB of data and 45 VMs) using only a few machines?"
    ]
   },
   {
@@ -157,6 +218,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the figure above, we can notice that the experiments with up to 4 workers result in a regression with an $R^{2}$ coeffcient close to the one obtained with all the experiments. Thus, we can have a reasonable prediction by using 10x less VMs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cloud Performance Variability\n",
+    "\n",
+    "Is there a correlation between the performance of two consecutive experiments?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
@@ -206,6 +283,28 @@
     "plt.title('Performance gain of two consecutive executions')\n",
     "plt.legend(loc='lower left', fontsize=14)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "No correlation has been observed. However, several papers detail the performance variability of Amazon EC2. Running a benchmark right before the application execution may improve the prediction (more experiments should be done)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Next Steps\n",
+    "* Strong scaling experiments\n",
+    " * Nuvem USP\n",
+    " * Amazon EC2\n",
+    "* Predict the minimum amount of VMs given an application deadline\n",
+    "* Analyze other types of applications\n",
+    "* Find common behaviors to improve the model"
    ]
   },
   {
