--- a/notebooks/001-Disk Access.ipynb
+++ b/notebooks/001-Disk Access.ipynb
@@ -38,7 +38,6 @@
     }
    ],
    "source": [
-    "%%time\n",
     "## Load K-means experiments\n",
     "parser = SparkParser()\n",
     "apps = tuple(parser.parse_folder('data/hibench/kmeans'))\n",
@@ -185,13 +184,19 @@
     "                \n",
     "# Only profiling executions for prediction\n",
     "min_size = get_min_size(app for app in apps if is_profiling(app))\n",
-    "print('When input size is {:.2f} MB/worker, data may not fit in memory. Based on this '\n",
-    "      'threshold, the table below shows the maximum number of workers that causes access to '\n",
-    "      'the disk or network.'.format(min_size / 1024**2))\n",
+    "print('Based on the profiling executions, data may not fit in memory when input size is'\n",
+    "      ' {:.2f} MB/worker or more.'.format(min_size / 1024**2))\n",
     "\n",
     "non_memory = predict_non_memory(apps, min_size)\n",
     "pd.DataFrame.from_records(non_memory, columns=['samples', 'max workers'], index='samples'). \\\n",
     "    sort_index()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the table above, we should use, for example, more than 4 workers if we want 16,384,000 samples to be processed completely from memory."
    ]
   },
   {
