--- a/notebooks/002-Wikipedia, HBSort, HBKmeans - No disk.ipynb
+++ b/notebooks/002-Wikipedia, HBSort, HBKmeans - No disk.ipynb
@@ -3803,6 +3803,26 @@
     "# Conclusion\n",
     "There are two major findings in this work. One is that the best model to predict the profiling set performs poorly in the target prediction. The other is that, despite of being two different applications, we were able to find one model that has good results for all target number of workers of the Wikipedia application and also for the HiBench Sort benchmark, from 2 to 64 workers using 3 and 31 GB of input data."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Export to CSV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for app in APPS:\n",
+    "    for s in SETS:\n",
+    "        dfs[app][s]['original'].to_csv('/tmp/virginia/{}_{}.csv'.format(app, s))"
+   ]
   }
  ],
  "metadata": {
