Renamed bundle model to evaluation

--- a/notebooks/004-Bundles.ipynb
+++ b/notebooks/004-Bundles.ipynb
@@ -1708,7 +1708,7 @@
    },
    "outputs": [],
    "source": [
-    "csv_file = Bundler.get_bundle('model').filenames[0] + '.bz2'\n",
+    "csv_file = Bundler.get_bundle('evaluation').filenames[0] + '.bz2'\n",
     "eval_df = pd.read_csv(csv_file)"
    ]
   },
